tests/ui/feature-gates/feature-gate-c_variadic-naked-functions.stderr
error[E0658]: Naked c-variadic `extern "sysv64"` functions are unstable
  --> $DIR/feature-gate-c_variadic-naked-functions.rs:19:1
   |
LL | unsafe extern "sysv64" fn c_variadic_sysv64(_: ...) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #148767 <https://github.com/rust-lang/rust/issues/148767> for more information
   = help: add `#![feature(c_variadic_naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
